Some findbugs fixes