@@ -170,11 +170,13 @@ public class TestClasses {
 
         private final Body _body;
 
+        @edu.umd.cs.findbugs.annotations.SuppressWarnings( "URF_UNREAD_FIELD" )
         public Container( final String bodyContent ) {
             _body = new Body();
             _body.someContent = bodyContent;
         }
 
+        @edu.umd.cs.findbugs.annotations.SuppressWarnings( "SIC_INNER_SHOULD_BE_STATIC" )
         class Body {
             String someContent;
         }
@@ -579,13 +581,13 @@ public class TestClasses {
             _String = "42";
             _StringBuffer = new StringBuffer( "foo" );
             _StringBuilder = new StringBuilder( "foo" );
-            _Long = new Long( 42 );
-            _Integer = new Integer( 42 );
-            _Character = new Character( 'c' );
-            _Byte = new Byte( "b".getBytes()[0] );
+            _Long = Long.valueOf( 42 );
+            _Integer = Integer.valueOf( 42 );
+            _Character = Character.valueOf( 'c' );
+            _Byte = Byte.valueOf( "b".getBytes()[0] );
             _Double = new Double( 42d );
             _Float = new Float( 42f );
-            _Short = new Short( (short) 42 );
+            _Short = Short.valueOf( (short) 42 );
             _BigDecimal = new BigDecimal( 42 );
             _AtomicInteger = new AtomicInteger( 42 );
             _AtomicLong = new AtomicLong( 42 );
@@ -843,6 +845,7 @@ public class TestClasses {
     static class Holder<T> {
         T item;
 
+        @edu.umd.cs.findbugs.annotations.SuppressWarnings( "URF_UNREAD_FIELD" )
         public Holder( final T item ) {
             this.item = item;
         }
@@ -851,6 +854,7 @@ public class TestClasses {
     static class HolderList<T> {
         List<Holder<T>> holders;
 
+        @edu.umd.cs.findbugs.annotations.SuppressWarnings( "URF_UNREAD_FIELD" )
         public HolderList( final List<Holder<T>> holders ) {
             this.holders = holders;
         }
@@ -859,6 +863,7 @@ public class TestClasses {
     static class CounterHolder {
         AtomicInteger item;
 
+        @edu.umd.cs.findbugs.annotations.SuppressWarnings( "URF_UNREAD_FIELD" )
         public CounterHolder( final AtomicInteger item ) {
             this.item = item;
         }
@@ -867,6 +872,7 @@ public class TestClasses {
     static class CounterHolderArray {
         CounterHolder[] holders;
 
+        @edu.umd.cs.findbugs.annotations.SuppressWarnings( "URF_UNREAD_FIELD" )
         public CounterHolderArray( final CounterHolder... holders ) {
             this.holders = holders;
         }
@@ -875,6 +881,7 @@ public class TestClasses {
     static class HolderArray<T> {
         Holder<T>[] holders;
 
+        @edu.umd.cs.findbugs.annotations.SuppressWarnings( "URF_UNREAD_FIELD" )
         public HolderArray( final Holder<T>... holders ) {
             this.holders = holders;
         }
